# fireworks

./: .gitignore  CMakeLists.txt  README.md
include/: color.h  control.h  emitter.h  event.h  framework_helpers.h  graphics_helper.h  graphics_helpers.h  keyboard_handler.h  mouse_handler.h  particle.h  point.h  renderer.h  shader.h  time_fw.h  transform.h  vec.h  vertex.h  window.h
res/: basic_shader_2d.frag  basic_shader_2d.vert
src/: CMakeLists.txt  color.c  control.c  emitter.c  event.c  framework_helpers.c  graphics_helper.c  graphics_helpers.c  keyboard_handler.c  main.c  mouse_handler.c  particle.c  point.c  renderer.c  shader.c  time_fw.c  transform.c  vertex.c  window.c
